[package]
name = "eduwiz-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
dotenv = "0.15.0"
dotenvy = "0.15.7"
r2d2_redis = "0.14.0"
rand = "0.8.5"
redis-derive = "0.1.7"
serde = {version = "1.0.190", features = ["derive"]}
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
